[package]
name = "async-sub"
version = "0.1.0"
edition = "2018"
authors = [
    "Maximilian Schulke <maximilian.schulke@hum-systems.com>",
    "Florian Uekermann <florian.uekermann@hum-systems.com>"
]
repository = "https://github.com/Hum-Systems/async-sub"
documentation = "https://docs.rs/async-sub"
keywords = ["async", "await", "reactive", "observable", "synchronization"]
categories = ["asynchronous", "concurrency", "network-programming"]
readme = "README.md"

[dependencies]
futures = "0.3.0"

[dev-dependencies]
async-std = { version = "1.9.0", features = [ "attributes" ] }
