[package]
name = "async-observable"
version = "0.2.0"
edition = "2018"
description = "Async & reactive synchronization model to keep multiple async tasks / threads partially synchronized."

authors = [
    "Mara Schulke <mara.schulke@hum-systems.com>",
    "Florian Uekermann <florian.uekermann@hum-systems.com>"
]
repository = "https://github.com/Hum-Systems/async-observable"
documentation = "https://docs.rs/async-observable"
keywords = ["async", "await", "reactive", "observable", "synchronization"]
categories = ["asynchronous", "concurrency", "network-programming"]
readme = "README.md"
license = "MIT"

[dependencies]
futures = "0.3.0"

[dev-dependencies]
async-std = { version = "1.12.0", features = [ "attributes" ] }
