[package]
name = "async-observable"
version = "0.4.2"
edition = "2021"
description = "Async & reactive synchronization model to keep multiple async tasks / threads partially synchronized."
authors = [
  "Mara Schulke <mara.schulke@hum-systems.com>",
  "Florian Uekermann <florian.uekermann@hum-systems.com>",
]
repository = "https://github.com/hemisphere-studio/async-observable"
documentation = "https://docs.rs/async-observable"
keywords = ["async", "await", "reactive", "observable", "synchronization"]
categories = ["asynchronous", "concurrency", "network-programming"]
readme = "README.md"
license = "MIT"

[dependencies]
uuid = { version = "*", features = ["v4"] }
futures = "0.3"
futures-util = "0.3"
slab = "0.4"
serde = { version = "1", optional = true }

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
serde_json = "1"
serde_derive = "1"
